2013-11-22 Blub

	* database bump: 7
		now optionally contains a list of files of each package
	* new query: filelist
		--ls now queries files
	* new filter: filename filter for filelist queries
		-ffile
	* action: --rm-files - remove contained filelists

2013-11-16 Blub

	* filter added: libpath
	* bugfix: fix parsing of regex filter commandlines

2013-11-09 Blub

	* more package filters:
		optdepends, alldepends, provides, conflicts, replaces

2013-11-05 Blub

	* database writing: fix: added missing open mode
	* database bump: 6
		db now contains a list of to-be-assumed-found libs

2013-11-02 Blub

	* filter support:
		-f filters -fname= -fname: -fname/regex/
		And negation by prefixing with a !
		group filters added
		added -fbroken
	* bug fixes:
		fixed segfault (null deref) when the db file cannot be opened

2013-10-22 Blub

	* file locking: Replaced O_EXLOCK with calls to flock(2)
	* database format 5:
		Packages now store the list of groups they're part of.

2013-08-05 Blub

	* --integrity: don't show missing / conflicting  package  messages
		multiple times

2013-08-04 Blub (0.1.3)

	* Released

2013-08-04 Blub

	* --wipe: added option to remove all packages
	* libalpm support: integrity checks will use libalpm's vercmp
	* --integrity: dependency and conflict integrity checks added

2013-07-28 Blub

	* -Rstrict:
		Database has a strict flag now.  Will later be used to  change
		how to treat osabi values set to 0.
	* 'josn' config typo fixed:
		In the config file, 'json' was not recognized, as there was  a
		typo making it 'josn', for now both will  be  recognized,  but
		the typo is deprecated (for obvious reasons...)

2013-07-15 Blub

	* -Rpkg-ld-append, --ld-append:
		Fixed bug: append inserted before the last element...   *sigh*

2013-07-09 Blub (0.1.2)

	* Released

2013-07-09 Blub

	* database format change:
		Added a bitfield to mask rules and library paths from being to
		the database.  Writing a database with no  rule  entries  will